# cpp_bootstrap

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  appveyor.yml  conanfile.txt  main.cpp
cmake/: CompilerWarnings.cmake  Conan.cmake  StaticAnalyzers.cmake  root_dir.h.in
script/: eight-queen.lua
shader/: fs.glsl  test_vs.glsl  vs.glsl
src/: directive_parser.cpp  directive_parser.h  file_reader.cpp  file_reader.h  heap_alloc.h  lua_include.h  main.cpp  shader.cpp  shader.hpp  stub.h  wav_file_data.cpp  wav_file_data.h
src/heap/: heap_alloc.cpp  heap_alloc.h
src/parser/: directive_parser.cpp  directive_parser.h
src/reader/: file_reader.cpp
src/wav/: wav_file_data.h
test/: CMakeLists.txt  simple_test.cpp  test_main.cpp
test/src/: simple_test.cpp  simple_test2.cpp
